@@ -7,6 +7,9 @@
    - markus@cvs.openbsd.org 2001/09/27 11:59:37
      [packet.c]
      missing called=1; chombier@mac.com
+   - markus@cvs.openbsd.org 2001/09/27 15:31:17
+     [auth2.c auth2-chall.c sshconnect1.c]
+     typos; from solar
 
 20011001
  - (stevesk) loginrec.c: fix type conversion problems exposed when using
@@ -6599,4 +6602,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1571 2001/10/03 17:10:17 mouring Exp $
+$Id: ChangeLog,v 1.1572 2001/10/03 17:12:43 mouring Exp $
